# primera_pagina-

./: .gitignore  README.md  pyproject.toml  rxconfig.py
primera_pagina_/: primera_pagina_.py
