[project]
name = "primera-pagina"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Cruz",email = "jc6283974@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "reflex (>=0.9.2,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
